--- a/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yzw-LI-zK2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,167 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZFO-Mp-YLC">
+                                <rect key="frame" x="250" y="285" width="100" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wS4-zp-PXC">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="qVo-yi-jJl"/>
+                                        </constraints>
+                                        <state key="normal" title="Log In">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="logInButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qZW-7d-fQ7"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="wS4-zp-PXC" firstAttribute="top" secondItem="ZFO-Mp-YLC" secondAttribute="top" id="0oO-en-6Xt"/>
+                                    <constraint firstAttribute="bottom" secondItem="wS4-zp-PXC" secondAttribute="bottom" id="4BA-FG-EHI"/>
+                                    <constraint firstAttribute="centerX" secondItem="wS4-zp-PXC" secondAttribute="centerX" id="Ql1-Wk-GS7"/>
+                                    <constraint firstAttribute="trailing" secondItem="wS4-zp-PXC" secondAttribute="trailing" id="jm0-7v-D0D"/>
+                                    <constraint firstItem="wS4-zp-PXC" firstAttribute="leading" secondItem="ZFO-Mp-YLC" secondAttribute="leading" id="mxR-sm-8zH"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="ZFO-Mp-YLC" secondAttribute="centerY" id="XKX-qc-qVR"/>
+                            <constraint firstAttribute="centerX" secondItem="ZFO-Mp-YLC" secondAttribute="centerX" id="ZVT-fQ-Lmk"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="aQc-T4-NVs"/>
+                    <connections>
+                        <outlet property="logInButton" destination="wS4-zp-PXC" id="czz-h5-JLy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1147" y="327"/>
+        </scene>
+        <!--Search View Controller-->
+        <scene sceneID="N8g-0b-2kN">
+            <objects>
+                <viewController storyboardIdentifier="Search" automaticallyAdjustsScrollViewInsets="NO" id="CVo-Ig-0MI" customClass="ZWVSearchViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wun-gh-Ndx"/>
+                        <viewControllerLayoutGuide type="bottom" id="i2I-2Q-jmN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2fO-di-8LS">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="88" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Bgb-j6-bx9">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetTableCell" rowHeight="67" id="5q0-H9-T7u" customClass="ZWVTweetTableViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5q0-H9-T7u" id="uJW-n4-kOG">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uUa-rL-iWf">
+                                                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="5Zb-xP-aZM"/>
+                                                        <constraint firstAttribute="height" constant="50" id="M94-Gr-Phe"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PQE-NB-K6v">
+                                                    <rect key="frame" x="66" y="31" width="526" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0b-z9-0bh">
+                                                    <rect key="frame" x="66" y="8" width="57" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="PQE-NB-K6v" firstAttribute="top" secondItem="e0b-z9-0bh" secondAttribute="bottom" constant="8" id="2Ec-02-oGC"/>
+                                                <constraint firstItem="uUa-rL-iWf" firstAttribute="top" secondItem="uJW-n4-kOG" secondAttribute="topMargin" id="3Lx-VZ-lxm"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="PQE-NB-K6v" secondAttribute="bottom" priority="999" id="4PP-Ud-vGK"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="e0b-z9-0bh" secondAttribute="trailing" id="I6p-Hu-s0h"/>
+                                                <constraint firstItem="e0b-z9-0bh" firstAttribute="top" secondItem="uUa-rL-iWf" secondAttribute="top" id="JSq-I2-7tu"/>
+                                                <constraint firstItem="e0b-z9-0bh" firstAttribute="leading" secondItem="uUa-rL-iWf" secondAttribute="trailing" constant="8" id="bEx-IB-Xgs"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="uUa-rL-iWf" secondAttribute="bottom" id="bkG-if-LPG"/>
+                                                <constraint firstItem="PQE-NB-K6v" firstAttribute="leading" secondItem="uUa-rL-iWf" secondAttribute="trailing" constant="8" id="j9a-jO-sHN"/>
+                                                <constraint firstItem="uUa-rL-iWf" firstAttribute="leading" secondItem="uJW-n4-kOG" secondAttribute="leadingMargin" id="nnO-w5-Gbo"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="PQE-NB-K6v" secondAttribute="trailing" id="pjE-CD-YYS"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="avatarImageView" destination="uUa-rL-iWf" id="mUq-dQ-tfB"/>
+                                            <outlet property="tweetTextLabel" destination="PQE-NB-K6v" id="rcC-JY-zCh"/>
+                                            <outlet property="usernameLabel" destination="e0b-z9-0bh" id="nbd-mb-9Nk"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="CVo-Ig-0MI" id="URK-Cd-xA9"/>
+                                    <outlet property="delegate" destination="CVo-Ig-0MI" id="fyM-vX-u90"/>
+                                </connections>
+                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="1lt-NZ-RT0">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="CVo-Ig-0MI" id="Yet-8T-MPp"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Bgb-j6-bx9" firstAttribute="top" secondItem="1lt-NZ-RT0" secondAttribute="bottom" id="4QZ-JU-8N1"/>
+                            <constraint firstItem="Bgb-j6-bx9" firstAttribute="top" secondItem="1lt-NZ-RT0" secondAttribute="bottom" id="Ekp-HO-0kO"/>
+                            <constraint firstAttribute="trailing" secondItem="1lt-NZ-RT0" secondAttribute="trailing" id="JYj-wP-ZRR"/>
+                            <constraint firstItem="1lt-NZ-RT0" firstAttribute="leading" secondItem="2fO-di-8LS" secondAttribute="leading" id="Kdw-Rf-Fpe"/>
+                            <constraint firstItem="1lt-NZ-RT0" firstAttribute="top" secondItem="2fO-di-8LS" secondAttribute="top" id="Vrl-Tj-XIW"/>
+                            <constraint firstItem="i2I-2Q-jmN" firstAttribute="top" secondItem="Bgb-j6-bx9" secondAttribute="bottom" id="jkX-7O-miQ"/>
+                            <constraint firstItem="1lt-NZ-RT0" firstAttribute="top" secondItem="wun-gh-Ndx" secondAttribute="bottom" id="lcN-eK-d48"/>
+                            <constraint firstAttribute="trailing" secondItem="Bgb-j6-bx9" secondAttribute="trailing" id="loO-YC-2vh"/>
+                            <constraint firstItem="Bgb-j6-bx9" firstAttribute="leading" secondItem="2fO-di-8LS" secondAttribute="leading" id="ujc-Se-ZTo"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Vrl-Tj-XIW"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="1lt-NZ-RT0" id="OJq-QJ-eOy"/>
+                        <outlet property="tableView" destination="Bgb-j6-bx9" id="31r-kZ-GX0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5f4-lq-lJ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1914" y="327"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="oDY-b2-Mpl">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Yzw-LI-zK2" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ysw-Vc-5ez">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="nun-cZ-RaK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WoF-hR-Ogu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="202" y="-366"/>
         </scene>
     </scenes>
 </document>
