--- a/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/Base.lproj/Main.storyboard
@@ -233,6 +233,71 @@
             </objects>
             <point key="canvasLocation" x="1914" y="327"/>
         </scene>
+        <!--Map Search View Controller-->
+        <scene sceneID="21H-qV-QHM">
+            <objects>
+                <viewController storyboardIdentifier="MapSearch" id="5ia-cS-Gcz" customClass="ZWVMapSearchViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="awr-sg-q1W"/>
+                        <viewControllerLayoutGuide type="bottom" id="dXG-gn-kxo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Aet-RG-tLi">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="He8-au-j7W">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <connections>
+                                    <outlet property="delegate" destination="5ia-cS-Gcz" id="CIS-es-YJo"/>
+                                </connections>
+                            </mapView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="nj1-2h-VWv">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IWJ-Pb-ghZ">
+                                <rect key="frame" x="502" y="536" width="82" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Y7h-Xg-Egz"/>
+                                </constraints>
+                                <state key="normal" title="Find Tweets">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="findTweetsButtonTapped:" destination="5ia-cS-Gcz" eventType="touchUpInside" id="heE-Jw-RxO"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dXG-gn-kxo" firstAttribute="top" secondItem="He8-au-j7W" secondAttribute="bottom" id="1hm-Nk-8Kq"/>
+                            <constraint firstItem="IWJ-Pb-ghZ" firstAttribute="trailing" secondItem="Aet-RG-tLi" secondAttribute="trailingMargin" id="CWn-Qf-Rr2"/>
+                            <constraint firstItem="IWJ-Pb-ghZ" firstAttribute="trailing" secondItem="Aet-RG-tLi" secondAttribute="trailingMargin" id="Gew-3B-Kf6"/>
+                            <constraint firstItem="He8-au-j7W" firstAttribute="leading" secondItem="Aet-RG-tLi" secondAttribute="leading" id="HaU-Rt-ihM"/>
+                            <constraint firstAttribute="trailing" secondItem="He8-au-j7W" secondAttribute="trailing" id="U4k-Sz-rav"/>
+                            <constraint firstItem="He8-au-j7W" firstAttribute="top" secondItem="awr-sg-q1W" secondAttribute="bottom" id="Zli-Qk-qgu"/>
+                            <constraint firstItem="nj1-2h-VWv" firstAttribute="leading" secondItem="Aet-RG-tLi" secondAttribute="leading" id="cFJ-ux-TEG"/>
+                            <constraint firstItem="He8-au-j7W" firstAttribute="top" secondItem="Aet-RG-tLi" secondAttribute="top" id="hIt-sy-Nft"/>
+                            <constraint firstAttribute="trailing" secondItem="nj1-2h-VWv" secondAttribute="trailing" id="hJc-8n-sWe"/>
+                            <constraint firstItem="nj1-2h-VWv" firstAttribute="top" secondItem="awr-sg-q1W" secondAttribute="bottom" id="jTm-6q-kNY"/>
+                            <constraint firstItem="dXG-gn-kxo" firstAttribute="top" secondItem="IWJ-Pb-ghZ" secondAttribute="bottom" constant="20" id="wyR-A3-GOF"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="hIt-sy-Nft"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="findTweetsButton" destination="IWJ-Pb-ghZ" id="ipN-YP-0Dc"/>
+                        <outlet property="mapView" destination="He8-au-j7W" id="Lyx-kO-5Q5"/>
+                        <outlet property="searchBar" destination="nj1-2h-VWv" id="jRv-yi-dOu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kFN-ob-7xU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1914" y="1034"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="oDY-b2-Mpl">
             <objects>
