--- a/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/Base.lproj/Main.storyboard
@@ -254,12 +254,16 @@
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="nj1-2h-VWv">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="5ia-cS-Gcz" id="WHV-ua-AxE"/>
+                                </connections>
                             </searchBar>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IWJ-Pb-ghZ">
-                                <rect key="frame" x="502" y="536" width="82" height="44"/>
+                                <rect key="frame" x="486" y="536" width="98" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Y7h-Xg-Egz"/>
                                 </constraints>
+                                <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                                 <state key="normal" title="Find Tweets">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
