--- a/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/Base.lproj/Main.storyboard
@@ -1,64 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yzw-LI-zK2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fkO-D9-ehY">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZFO-Mp-YLC">
-                                <rect key="frame" x="250" y="285" width="100" height="30"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wS4-zp-PXC">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="qVo-yi-jJl"/>
-                                        </constraints>
-                                        <state key="normal" title="Log In">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="logInButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qZW-7d-fQ7"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="wS4-zp-PXC" firstAttribute="top" secondItem="ZFO-Mp-YLC" secondAttribute="top" id="0oO-en-6Xt"/>
-                                    <constraint firstAttribute="bottom" secondItem="wS4-zp-PXC" secondAttribute="bottom" id="4BA-FG-EHI"/>
-                                    <constraint firstAttribute="centerX" secondItem="wS4-zp-PXC" secondAttribute="centerX" id="Ql1-Wk-GS7"/>
-                                    <constraint firstAttribute="trailing" secondItem="wS4-zp-PXC" secondAttribute="trailing" id="jm0-7v-D0D"/>
-                                    <constraint firstItem="wS4-zp-PXC" firstAttribute="leading" secondItem="ZFO-Mp-YLC" secondAttribute="leading" id="mxR-sm-8zH"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="centerY" secondItem="ZFO-Mp-YLC" secondAttribute="centerY" id="XKX-qc-qVR"/>
-                            <constraint firstAttribute="centerX" secondItem="ZFO-Mp-YLC" secondAttribute="centerX" id="ZVT-fQ-Lmk"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="aQc-T4-NVs"/>
-                    <connections>
-                        <outlet property="logInButton" destination="wS4-zp-PXC" id="czz-h5-JLy"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1147" y="327"/>
-        </scene>
-        <!--Search View Controller-->
+        <!--Item-->
         <scene sceneID="N8g-0b-2kN">
             <objects>
                 <viewController storyboardIdentifier="Search" automaticallyAdjustsScrollViewInsets="NO" id="CVo-Ig-0MI" customClass="ZWVSearchViewController" sceneMemberID="viewController">
@@ -71,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="88" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Bgb-j6-bx9">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetTableCell" rowHeight="67" id="5q0-H9-T7u" customClass="ZWVTweetTableViewCell">
@@ -224,6 +171,7 @@
                             </mask>
                         </variation>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="hTn-QZ-fDh"/>
                     <connections>
                         <outlet property="searchBar" destination="1lt-NZ-RT0" id="OJq-QJ-eOy"/>
                         <outlet property="tableView" destination="Bgb-j6-bx9" id="31r-kZ-GX0"/>
@@ -231,9 +179,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5f4-lq-lJ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1914" y="327"/>
+            <point key="canvasLocation" x="2726" y="327"/>
         </scene>
-        <!--Map Search View Controller-->
+        <!--Item-->
         <scene sceneID="21H-qV-QHM">
             <objects>
                 <viewController storyboardIdentifier="MapSearch" id="5ia-cS-Gcz" customClass="ZWVMapSearchViewController" sceneMemberID="viewController">
@@ -246,7 +194,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="He8-au-j7W">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
                                 <connections>
                                     <outlet property="delegate" destination="5ia-cS-Gcz" id="CIS-es-YJo"/>
                                 </connections>
@@ -259,7 +207,7 @@
                                 </connections>
                             </searchBar>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IWJ-Pb-ghZ">
-                                <rect key="frame" x="486" y="536" width="98" height="44"/>
+                                <rect key="frame" x="486" y="487" width="98" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Y7h-Xg-Egz"/>
                                 </constraints>
@@ -292,6 +240,7 @@
                             </mask>
                         </variation>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="nfr-IP-46k"/>
                     <connections>
                         <outlet property="findTweetsButton" destination="IWJ-Pb-ghZ" id="ipN-YP-0Dc"/>
                         <outlet property="mapView" destination="He8-au-j7W" id="Lyx-kO-5Q5"/>
@@ -300,25 +249,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kFN-ob-7xU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1914" y="1034"/>
+            <point key="canvasLocation" x="2726" y="1034"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="oDY-b2-Mpl">
+        <!--Tab Bar Controller-->
+        <scene sceneID="OTW-c1-Fcy">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Yzw-LI-zK2" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="fkO-D9-ehY" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ysw-Vc-5ez">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="K3H-ME-oh9">
                         <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="nun-cZ-RaK"/>
+                        <segue destination="CVo-Ig-0MI" kind="relationship" relationship="viewControllers" id="WoG-gb-VZY"/>
+                        <segue destination="5ia-cS-Gcz" kind="relationship" relationship="viewControllers" id="Jcx-Fb-Uki"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WoF-hR-Ogu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pxb-GD-Jvi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="202" y="-366"/>
+            <point key="canvasLocation" x="1914" y="680"/>
         </scene>
     </scenes>
 </document>
